Archive2/36/7643486f993f86/output
main.cpp:2:7: error: expected nested-name-specifier before 'name'
 using name std;
       ^
main.cpp: In function 'int main()':
main.cpp:12:2: error: 'cout' was not declared in this scope
  cout<< "r="<<r<<endl;
  ^
main.cpp:12:2: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/local/include/c++/4.9.2/iostream:61:18: note:   'std::cout'
   extern ostream cout;  /// Linked to standard output
                  ^
main.cpp:12:18: error: 'endl' was not declared in this scope
  cout<< "r="<<r<<endl;
                  ^
main.cpp:12:18: note: suggested alternative:
In file included from /usr/local/include/c++/4.9.2/iostream:39:0,
                 from main.cpp:1:
/usr/local/include/c++/4.9.2/ostream:564:5: note:   'std::endl'
     endl(basic_ostream<_CharT, _Traits>& __os)
     ^
